# jobfit-ai

./: .env.example  .gitignore  .versionrc  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json
src/: Makefile  cli.py  config.py  database.py  pyproject.toml  ruff.toml
src/app/: __init__.py  di_container.py
src/app/cli/: create_db_cli.py  seeder_cli.py
src/app/database/factories/: base_factory.py  job_factory.py  resume_submission_factory.py  user_factory.py
src/app/database/migrations/: alembic.ini  env.py
src/app/database/seeds/: __init__.py  base_seed.py  job_seed.py  resume_submission_seed.py  user_seeder.py
src/app/helpers/: resume_parser.py
src/app/managers/: base.py
src/app/managers/postgresql/: job_manager.py  resume_submission_manager.py  user_manager.py
src/app/models/: base.py
src/app/models/mongodb/: job_analysis.py  resume_analysis.py
src/app/models/postgresql/: __init__.py  job.py  user.py
src/app/routers/: base.py  jobs.py  resume_submissions.py  users.py
src/app/schemas/: base.py  job.py  resume_submission.py  user.py
src/app/services/: base.py  job_service.py  resume_submission_service.py  user_service.py
src/tests/: common.py  conftest.py
src/tests/functional/: test_jobs.py  test_resume_submission.py  test_users.py
src/tests/integration/: test_jobs.py  test_users.py
src/tests/integration/managers/: test_resume_submission_manager.py
src/tests/integration/models/: test_job_model.py  test_resume_submission_model.py  test_user_model.py
src/tests/integration/routers/: test_job_router.py  (+2 more)
src/tests/unit/: test_models.py
(+12 files in other folders)
