[project]
name = "jobfit-ai"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.23",
]
